--- a/quiz.html
+++ b/quiz.html
@@ -16,13 +16,54 @@
 				<p class="question">필요하다</p>
 
 				<ul>
+				<!--The right answer -->
 				<input class="answer" type="radio" name="q1" value="1">
-				<label>To need, to be necessary, to be required</label>
+				<label id="correctString1">To need, to be necessary, to be required</label>
 				<br>
 				<input class="answer" type="radio" name="q1" value="0">
 					<label>To be possible</label>
 				<br>
 				<input class="answer" type="radio" name="q1" value="0">
+					<label>to be strange</label>
+				</ul>
+			</div>
+		</td>
+	</tr>
+
+	<tr>
+		<td>
+			<div>
+				<p class="question">멈추다</p>
+
+				<ul>
+				<input class="answer" type="radio" name="q2" value="0">
+				<label>To be small</label>
+				<br>
+				<!--The right answer -->
+				<input class="answer" type="radio" name="q2" value="1">
+					<label id="correctString2">To sleep</label>
+				<br>
+				<input class="answer" type="radio" name="q2" value="0">
+					<label>To see</label>
+				</ul>
+			</div>
+		</td>
+	</tr>
+
+	<tr>
+		<td>
+			<div>
+				<p class="question">고르다</p>
+
+				<ul>
+				<!--The right answer -->
+				<input class="answer" type="radio" name="q2" value="1">
+					<label id="correctString3">To choose</label>
+				<br>
+				<input class="answer" type="radio" name="q2" value="0">
+					<label>To be possible</label>
+				<br>				
+				<input class="answer" type="radio" name="q2" value="0">
 					<label>to be strange</label>
 				</ul>
 			</div>
